# pymszip

./: LICENSE  README.md  pyproject.toml
src/pymszip/: __init__.py
tests/: test_pymszip.py
