[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name =  "pymszip"
authors = [
    {name = "Frederik Reiter", email = "pymszip@frereit.de"},
]
description = "Compress and Decompress MSZIP data"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
requires-python = ">=3.9.1"
dynamic = ["version"]
dependencies = []
license = { text = "MIT License" }

[urls]
"Source Repository" = "https://github.com/frereit/pymszip"
"Issue Tracker" = "https://github.com/frereit/pymszip/issues"

[project.optional-dependencies]
dev = [
    "black~=24.4.2",
    "pytest"
]
